# high-order-fd

./: .gitignore  CMakeLists.txt  README.md  analysis.py  main.cpp  rational.h  solver.cpp  solver.h  stencil.cpp  stencil.h  test_boost_mutation.cpp  test_stencils.cpp
include/: assembly.h  interface.h  problem.h  rational.h  solver.h
include/solvers/: refinement.h  sparse.h  tridiagonal.h
scripts/: assembly.py  pareto.py  throughput.py
src/: assembly.cpp  assembly_bounds.cpp  assembly_routines.cpp  main.cpp  problem.cpp  solver.cpp  stencil.cpp
src/solvers/: sparse.cpp  tridiagonal.cpp
tests/: bench_matrix_assembly.cpp  likwid_bench.py  likwid_store_bench.py  test_matrix_assembly.cpp
